--- a/index.html
+++ b/index.html
@@ -75,8 +75,17 @@
     <p>
       This site is a digital representation of me. 
       <br>It has various facets of my life and things that have influenced me. <br>
-      <br>Do click on the tabs and checkout all the content.<br>
+      <br>Do click on the tabs and checkout all the content.<br><br>
       Do check out <a href="collections.html">the collections</a> (has an interesting set of collections)<br> and the bulk of the information branches off from that page.
+    </p>
+    <br>
+  </div>
+  <div class="text-lg text-grey leading-normal spaced-y-6">
+    <p>
+      Contact me:<br>
+      Twitter: <a href="https://twitter.com/ShivhariShankar">@shivharishankar</a><br>
+      Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com
+      
     </p>
     <br>
   </div>
