twitter to new tab
twitter to new tab

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="text-lg text-grey leading-normal spaced-y-6">
     <p>
       Contact me:<br>
-      Twitter: <a href="https://twitter.com/ShivhariShankar">@shivharishankar</a><br>
+      Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br>
       Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com
       
     </p>
