Books i've read to collections

--- a/collections.html
+++ b/collections.html
@@ -74,6 +74,9 @@
           People who have inspired my thinking - <a href="./inspiration.html" target="_blank">Link</a>
         </li>
         <li>
+          List of books i've read - <a href="https://www.goodreads.com/user/show/5300394-shivhari" target="_blank">Link</a>
+        </li>
+        <li>
           List of Japan culture videos - <a href="./japan.html" target="_blank">Link</a>
         </li>
         <li>
