--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       I love to absorb information and to exercise my intellect. 
     </p>
     <p>
-      I give talks on blockchain, play the mridangam, and beatbox (kind off).
+      I give talks on blockchain, play the mridangam, and beatbox (kind of).
     </p>
     <br>
   </div>
