--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>
       This site is a digital representation of me. 
       <br>It has various facets of my life and things that have influenced me. <br>
-      <br>Do click on the tabs and checkout all the content.<br><br>
+      <br>Do click on the tabs and browse around.<br><br>
       Do check out <a href="collections.html">the collections</a> (has an interesting set of collections)<br> and the bulk of the information branches off from that page.
     </p>
     <br>
