update links on homepage

--- a/index.html
+++ b/index.html
@@ -77,16 +77,16 @@
     <div class="max-w-md">
         <h1 class="text-2xl font-extrabold text-white mb-4">About this site</h1>
   </div>
-  <div class="text-lg text-grey leading-normal spaced-y-6">
+  <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
     <p>
       This site is a digital representation of me. 
       <br>It has various facets of my life and things that have influenced me. <br>
       <br>Do click on the tabs and browse around.<br><br>
-      Do check out <a href="collections.html">the collections</a> (has an interesting set of collections)<br> and the bulk of the information branches off from that page.
+      Also check out <a href="collections.html">the collections page.</a> (has an interesting set of collections).<br> The bulk of the information branches off from that page.
     </p>
     <br>
   </div>
-  <div class="text-lg text-grey leading-normal spaced-y-6">
+  <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
     <p>
       Contact me:<br>
       Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br>
