links to inspirational people

--- a/inspiration.html
+++ b/inspiration.html
@@ -65,34 +65,34 @@
       <span class="block text-grey font-semibold text-xl underline mb-1">Non-Personal</span>
       <ul>
        <li>
-          Sam Harris
+          <a href="https://en.wikipedia.org/wiki/Sam_Harris" target="_blank">Sam Harris</a>
         </li>
         <li>
-          Christopher hitchins
+          <a href="https://en.wikipedia.org/wiki/Christopher_Hitchens" target="_blank">Christopher Hitchens</a>
         </li>
         <li>
-          Douglas hofstader
+          <a href="https://en.wikipedia.org/wiki/Douglas_Hofstadter" target="_blank">Douglas Hofstadter</a>
         </li>
         <li>
-          Vinay Gupta
+          <a href="https://twitter.com/leashless/" target="_blank">Vinay Gupta</a>
         </li>
         <li>
-          Ram Dass
+          <a href="https://en.wikipedia.org/wiki/Ram_dass" target="_blank">Ram Dass</a>
         </li>
         <li>
-          Sean Caroll
+          <a href="https://en.wikipedia.org/wiki/Sean_M._Carroll" target="_blank">Sean Caroll</a>
         </li>
         <li>
-          David Bohm / Jiddu Krishnamurthy
+          <a href="https://www.youtube.com/watch?v=skSh1FUXXZE&list=PL1n30s-LKus4oQ5fCd6MJ17waAMCsgumf" target="_blank">David Bohm / Jiddu Krishnamurti</a>
         </li>
         <li>
-          UG Krishnamurthy
+          <a href="https://en.wikipedia.org/wiki/U_G_Krishnamurti" target="_blank">U. G. Krishnamurti</a>
         </li>
         <li>
-          H. H. The Dalai Lama
+          <a href="https://en.wikipedia.org/wiki/14th_Dalai_Lama" target="_blank">H. H. The Dalai Lama</a>
         </li>
         <li>
-          Buddha
+          <a href="https://en.wikipedia.org/wiki/Gautama_Buddha" target="_blank">Buddha</a>
         </li>
       </ul>
     </p>
