typos and links

--- a/collections.html
+++ b/collections.html
@@ -28,7 +28,7 @@
           <a href="collections.html" class="text-grey  font-semibold no-underline hover:underline">Collections</a>
           <a href="meditation.html" class="text-grey  font-semibold no-underline hover:underline">Meditation</a>
           <a href="music.html" class="text-grey  font-semibold no-underline hover:underline">Music</a>
-          <a href="procastination.html" class="text-grey  font-semibold no-underline hover:underline">Procastination</a>
+          <a href="procrastination.html" class="text-grey  font-semibold no-underline hover:underline">Procrastination</a>
           <a href="system-of-recording.html" class="text-grey  font-semibold no-underline hover:underline">My System of recording</a>
         </div>
       </div>
@@ -47,7 +47,7 @@
       <a href="collections.html" class="block text-black font-bold no-underline">Collections</a>
       <a href="meditation.html" class="block text-black font-bold no-underline">Meditation</a>
       <a href="music.html" class="block text-black font-bold no-underline">Music</a>
-      <a href="procastination.html" class="block text-black font-bold no-underline">Procastination</a>
+      <a href="procrastination.html" class="block text-black font-bold no-underline">Procrastination</a>
       <a href="system-of-recording.html" class="block text-black font-bold no-underline">My System of recording</a>
     </div>
   </div>
@@ -107,7 +107,7 @@
           </p>
         </li>
         <li>
-          Music Artist seen live - <a href="./artists.html" target="_blank">Link</a>
+          Music Artist seen live - <a href="./artists-live.html" target="_blank">Link</a>
         </li>
         <!-- <li>
           List of strange loops - <a href="https://www.youtube.com/watch?v=Fr3ChJAM-ls" target="_blank">Link</a>
