--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a href="collections.html" class="text-grey  font-semibold no-underline hover:underline">Collections</a>
           <a href="meditation.html" class="text-grey  font-semibold no-underline hover:underline">Meditation</a>
           <a href="music.html" class="text-grey  font-semibold no-underline hover:underline">Music</a>
-          <a href="procastination.html" class="text-grey  font-semibold no-underline hover:underline">Procastination</a>
+          <a href="procrastination.html" class="text-grey  font-semibold no-underline hover:underline">Procrastination</a>
           <a href="system-of-recording.html" class="text-grey  font-semibold no-underline hover:underline">My System of recording</a>
         </div>
       </div>
@@ -54,7 +54,7 @@
       <a href="collections.html" class="block text-black font-bold no-underline">Collections</a>
       <a href="meditation.html" class="block text-black font-bold no-underline">Meditation</a>
       <a href="music.html" class="block text-black font-bold no-underline">Music</a>
-      <a href="procastination.html" class="block text-black font-bold no-underline">Procastination</a>
+      <a href="procrastination.html" class="block text-black font-bold no-underline">Procrastination</a>
       <a href="system-of-recording.html" class="block text-black font-bold no-underline">My System of recording</a>
     </div>
   </div>
