quotes and ideas

--- a/collections.html
+++ b/collections.html
@@ -74,20 +74,27 @@
           People who have inspired my thinking - <a href="./inspiration.html" target="_blank">Link</a>
         </li>
         <li>
-          List of books i've read - <a href="https://www.goodreads.com/user/show/5300394-shivhari" target="_blank">Link</a>
+          Quotes / ideas - <a href="./quotes-ideas.html" target="_blank">Link</a>
+          <p><span class="block text-grey font-semibold text-sm tracking-wide mb-1">
+          A list of quotes / ideas that I have picked up from the world around me.</span>
+          </p>
         </li>
+
         <li>
-          List of Japan culture videos - <a href="./japan.html" target="_blank">Link</a>
+          List of books i've read - <a href="https://www.goodreads.com/user/show/5300394-shivhari" target="_blank">Link</a>
         </li>
         <li>
           Mind Change - <a href="https://www.youtube.com/watch?v=r6w2M50_Xdk&list=PLka-n-lnhxYiKFcrc9TVGdk8IjQNa37we" target="_blank">Link</a>
           <p><span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-          A lit of youtube videos that I believe will profoundly change the way you think.</span>
+          A list of youtube videos that I believe will profoundly change the way you think.</span>
           </p>
         </li>
         <!-- <li>
           List of ideas that I think about or have heard<a href="https://www.youtube.com/watch?v=Fr3ChJAM-ls" target="_blank">Link</a>
         </li> -->
+        <li>
+          List of Japan culture videos - <a href="./japan.html" target="_blank">Link</a>
+        </li>
         <li>
           Wow <a href="https://www.youtube.com/watch?v=Ggw8Gqi4-Z0&list=PLka-n-lnhxYgIWsAXKTcQcROjxKu6TVkg" target="_blank">Link</a>
           <p><span class="block text-grey font-semibold text-sm tracking-wide mb-1">
