--- a/procrastination.html
+++ b/procrastination.html
@@ -58,7 +58,7 @@
   <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6">Procrastination</h1>
   <div class="markdown text-grey">
     <p>
-      Procrastination is something that plagues a lot of people. While the severity of it might depend from person to person, I think procrastination hits us at our most vunerable areas. It let's us not be the versions of us that we want to be and can be detrimental to our well being. I have research a decent amount about the various facets of procrastination and how to overcome them. Below is the summary of the same. 
+      Procrastination is something that plagues a lot of people. While the severity of it might depend from person to person, I think procrastination hits us at our most vunerable areas. It lets us not be the versions of us that we want to be and can be detrimental to our well being. I have researched a decent amount about the various facets of procrastination and how to overcome them. Below is the summary of the same. 
 </p><p>
     <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
             If you suffer from chronic procrastination, and need help, please reach out to me. I would love to talk. ♡</span>
@@ -69,7 +69,7 @@
         <li>
           Have a plan for yourself
           <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            There is no way you can overcome procrastination if you dont plan. At minimum, plan a few hours ahead. Ideally, plan a day or a few days in advance. Will power works best when it doesnt work, make predecisions on what you are going to do when and stick to it.</span>
+            There is no way you can overcome procrastination if you don't plan. At minimum, plan a few hours ahead. Ideally, plan a day or a few days in advance. Will power works best when it doesnt work, make predecisions on what you are going to do when and stick to it.</span>
         </li>
         <li>
           Mindfulness
