--- a/system-of-recording.html
+++ b/system-of-recording.html
@@ -58,7 +58,7 @@
   <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6">System of recording</h1>
   <div class="markdown text-grey">
     <p>
-      I try and record and maintain decent logs of things I do in my life. There are two reasons for this:</p>
+      I try to record and maintain decent logs of things I do in my life. There are two reasons for this:</p>
       <p>1. It helps augment your brain - resources and information about your life are stored in a retrivable way makes your anxiety lesser. We tend to forget and unless you log things, it will fade away. </p>
       <p>2. We create narratives of our lives - that is how our brains work. However, it is important to have objective data about yourself to make sure that you can correlate narratives with actual data. If you dont record, there is nothing to correlate your narratives with.</p>
 
