--- a/collections.html
+++ b/collections.html
@@ -98,7 +98,7 @@
         <li>
           Wow <a href="https://www.youtube.com/watch?v=Ggw8Gqi4-Z0&list=PLka-n-lnhxYgIWsAXKTcQcROjxKu6TVkg" target="_blank">Link</a>
           <p><span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-          A lit of youtube videos that made me go "WOW!".</span>
+          A list of youtube videos that made me go "WOW!".</span>
           </p>
         </li>
        <li>
