--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       Contact me:<br>
       Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br>
       Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com
-      
+      LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
     </p>
     <br>
   </div>
