--- a/talks.html
+++ b/talks.html
@@ -84,7 +84,7 @@
         <li>
           Blockchain based business models
           <p><span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            A talk given for Starfleet India Accelerator program. Primarily around how busines models changes in the blockchain ecosystem.</span>
+            A talk given for Starfleet India Accelerator program. Primarily around how business models change in the blockchain ecosystem.</span>
           </p>
         </li>
         <li>
