--- a/meditation.html
+++ b/meditation.html
@@ -86,7 +86,7 @@
        <li>
           The cutting machinery [website] - <a href="http://thecuttingmachinery.com/" target="_blank">Link</a>
           <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            This is what I currently use. It requires an hour a day of dedication which is much easier said than done. However, the technique makes a lot of sense and Vinay Gupta is someone who I think is highly underappreciated. This technique has stripped away This technique is like jumping into an ocean directly. If that is your flavour of vodka, go ahead!</a></span>
+            This is what I currently use. It requires an hour a day of dedication which is much easier said than done. However, the technique makes a lot of sense and Vinay Gupta is someone who I think is highly underappreciated. This practice is like jumping into an ocean directly without necessarily knowing if you can swim properly. If that appeals to you, go ahead!</a></span>
         </li>
       </ul>
     </p>
