--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1 class="text-2xl font-extrabold text-white mb-4">Me?</h1>
   <div class="text-lg text-grey leading-normal spaced-y-6">
     <p>
-      I currently head products at Springworks.
+      I currently lead product at Bureau.
     </p>
     <p>
       I love to absorb information and to exercise my intellect. 
