--- a/artists-live.html
+++ b/artists-live.html
@@ -127,6 +127,49 @@ Kokoroko<br>
 * OTT<br>
 Mantis Mash<br>
 Ministry of blues<br>
+* Hanumankind (2)<br>
+Rishi Sippy - many times at Tao terraces<br>
+Nils Hoffman<br>
+Weird sounding dude<br>
+Oksidaksi<br>
+Calm Chor<br>
+Babalos<br>
+Mind Against<br>
+Marsh<br>
+Dark light<br>
+Ma Faiza<br>
+Colyn<br>
+Diatonik<br>
+Stalvart John<br>
+Monolink<br>
+Sectio Aurea<br>
+Whirkk<br>
+Dixon<br>
+Fever333<br>
+Illenium<br>
+Machine Gun Kelly<br>
+F16s<br>
+Nox Vauhn<br>
+Prem Joshua<br>
+DJ Shantam<br>
+Tassneem<br>
+* Porcupine Tree (2)<br>
+* Polo and Pan<br>
+* Bicep (2)<br>
+Satori<br>
+Gigi Masin<br>
+Hozho<br>
+Anyasa (4)<br>
+Atoem<br>
+Unnayanaa<br>
+Todh Teri<br>
+Two Eye Wizard<br>
+La P'tite Fumée<br>
+Shanti People<br>
+Agam<br>
+The Down Troddance<br>
+Shivamani<br>
+Haruka<br>
       </span>
     </p>
   </div>
