added contact us to procastination + change job designation

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1 class="text-2xl font-extrabold text-white mb-4">Me?</h1>
   <div class="text-lg text-grey leading-normal spaced-y-6">
     <p>
-      I currently lead product at Bureau.
+      I currently do Product @ slice
     </p>
     <p>
       I love to absorb information and to exercise my intellect. 
@@ -97,12 +97,14 @@
     <br>
   </div>
   <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
+    <a id="contact">
     <p>
       Contact me:<br>
       Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br>
       Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com
       LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
     </p>
+    </a>
     <br>
   </div>
 </div>
