--- a/procrastination.html
+++ b/procrastination.html
@@ -61,7 +61,7 @@
       Procrastination is something that plagues a lot of people. While the severity of it might depend from person to person, I think procrastination hits us at our most vunerable areas. It lets us not be the versions of us that we want to be and can be detrimental to our well being. I have researched a decent amount about the various facets of procrastination and how to overcome them. Below is the summary of the same. 
 </p><p>
     <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            If you suffer from chronic procrastination, and need help, please reach out to me. I would love to talk. ♡</span>
+            If you suffer from chronic procrastination, and need help, <a href="./index.html#contact">please reach out to me.</a> I would love to talk. ♡</span>
             </p>
     <p>
       <span class="block text-grey font-semibold text-xl underline mb-1">How to overcome procrastination:</span>
