--- a/music/shivAsianUndergroundJourney.html
+++ b/music/shivAsianUndergroundJourney.html
@@ -55,67 +55,42 @@
   <div class="lg:pl-32 mt-12">
     <div class="max-w-md">
         
-  <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6">System of recording</h1>
+  <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6">The journey to Asian Underground</h1>
   <div class="markdown text-grey">
     <p>
-      I try to record and maintain decent logs of things I do in my life. There are two reasons for this:</p>
-      <p>1. It helps augment your brain - resources and information about your life are stored in a retrivable way makes your anxiety lesser. We tend to forget and unless you log things, it will fade away. </p>
-      <p>2. We create narratives of our lives - that is how our brains work. However, it is important to have objective data about yourself to make sure that you can correlate narratives with actual data. If you dont record, there is nothing to correlate your narratives with.</p>
+ <p>     My journey with Asian underground started with being born in a Tam Bram household. My parents put me on Indian classical vocals and learning Mridangam. I at that time being the rebel that I was, used to go for the classes but would absolutely detest it and not appreciate the value of it. I would never practice at home and I would just do what is minimally required to continue on with that. I started learning at 1998 at the age of 7.</p>
+ <p>Fast forward to the year 2006 and the TV channel VH1 was becoming popular. One day I was on VH1 and a track played that was very unlike all the other English Pop music that they play. It was a track Niladri Kumar called Priority. </p>
+ <p>It featured a guy playing the sitar and absolutely shredding it with almost a metal like distortion to the sitar. It featured beautiful psychedelic visuals and described an alternate world where humans are at peace with each other. I heard that track and instantly fell in love with it. It was the first time that I'd ever seen someone do something with Indian classical elements and electronic music on top of it. I used to keep going back to VH1 hoping that they would play the track again and I heard that track quite a few times on VH1.</p>
+ <p>This was also the time when people used to bring CDs and hard disks over to share music with each other. And one of cousins made me listen to a song from Enigma called The child in us. It was a song like no other and had beautiful Indian classical vocals interspersed with drum beats and electronic stuff. It  again showcased to me that Indian classical music is not just reserved for the formal setting that it normally is and that it is a space through which you can do a lot of interesting things. </p> 
+ <p>This sort of led me to just search for more Indian fusion. I remember I was 16 years old I went to a torrent site and I searched for Indian fusion and came across this album called MIDIval Punditz Remixed uploaded by this user called truckdriver. I instantly downloaded the album and listened to it and absolutely fell in love. The song Dark Age which is a Karsh Kale remix of MIDIval Punditz song absolutely captivated me and I used to keep listening to it on repeat. Here was me a 16-17 year old listening, learning Indian classical and finally enjoying it and finding it interesting because it had a more modern take to it. </p>
+ 
+ <p>At that age I got obsessed with what at that time I thought was Indian fusion music and would search the internet for it. I found a torrent that was 5GB in size and then downloaded all the songs it had. Some of the best artists, the who's who of the Asian underground scene, including DJ Cheb I Sabbah, MIDIval Punditz,  Talvin Singh, State of Bengal and so on. I consumed as much music as I could. And I still have those files. It just opened up to me the fact that there is so much that can be done with Indian classical and electronic beats. combined. </p>
+ 
+ <p>Time went on and I always in the back of my mind wanted this music to propagate further. As I read more about Asian underground, I realized that it had had, it had had its glory days back in 2005 or so. And since then hasn't really picked up much. When I went to college, and I was the licensee for TEDx in Manipal I was hell bent on getting midival pundits and they agreed to come to Manipal and give a talk. In that talk, they spoke about how when they started off it was just 10 people coming for the kicks they will do gig every Friday in Delhi called Mehfil and only 10 people would show up or so. They kept pursuing and enduring and then it became a huge thing. In the end of the talk, they played a version of their song called Electric Universe, which had a Ajay Prasanna on the flute and it was a live version of the song and a very different take from the album version. To date, I still wish I had recorded it because it was an absolutely beautiful version that just captured me at that moment and was so refreshing and magical. </p>
+ 
+ <p>Overtime I've been fortunate to hear medieval pundits play a few times I've heard Karsh Kale play both the Live Set with his tabla and a DJ set. I've heard some people in Bangalore like Digvijay and The Untitled One playing asian underground sets. I've always hoped that this would become a regular thing, because the music meant so much to me and I just wanted a space where it was playing. </p>
+ 
+ <p>Fast forward to 2023 April and on a whim I signed up for a DJ course because I felt like I just want to learn. With no intention of ever doing anything with it except to just understand what DJs do better than enhance my musical knowledge. It so happened that I met the Untitled One at the last day of the DJ course and expressed to him my love and need for Asian underground music.</p>
 
-    </p>
-    <p>
-      <span class="block text-grey font-semibold text-xl underline mb-1">Things I record:</span>
-      <ul>
-        <li>
-          A journal entry of each day of my life
-        </li>
-        <li>
-          List of bank accounts and transactions
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            I keep all the transactions from each of my bank accounts in an excel as banking websites have terrible interfaces to query against. Helps in expense tracking and esp during income tax filing.</span>
-        </li>
-        <li>
-          Habit tracking for habits I do regularly
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            I highly recommend using <a href="https://play.google.com/store/apps/details?id=com.rstudioz.habits" target="_blank">Habit Hub</a> for tracking habits. Its where I track my meditation, when I spoke to my parents, my exercise and if I wrote my journal.</span>
-        </li>
-        <li>
-          List of all my travels outside the city
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            Along with who I met and where I went - really helps in questions like: "I wonder when I took that trip to Thailand"</span>
-        </li>
-        <li>
-          Notes of conversations with people
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            Esp if the conversation has been intellectually stimulating and covered a wide variety of topics.</span>
-        </li>
-        <li>
-          Important articles / videos that I have seen
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            Really helpful if you want to recommend someone to something and if you suddenly remember about it but dont presicely remember the name or exact information.</span>
-        </li>
-        <li>
-          List of shortcuts that I use
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            Across multiple apps I really try and use shortcuts as much as possible - they really do cut down time and lead to an optimized workflow.</span>
-        </li>
-        <li>
-          List of who my friends are
-        </li>
-        <li>
-          List of friends who I meet and when
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            This is mostly for people who dont live in the same city as me or people I meet infrequently.</span>
-        </li>
-        <li>
-          Pomodoros of work done
-          <span class="block text-grey font-semibold text-sm tracking-wide mb-1">
-            I use <a href="https://play.google.com/store/apps/details?id=com.wlxd.pomochallenge" target="_blank">this app</a> to track my work sessions. I typically work in 10min pomodoro sessions and track my work patterns over time.</span>
-        </li>
-        <li>
-          List of countries I've visited           
-        </li>
-      </ul>
+<p>It's been a full circle for me to come and play. It's music that is absolutely dear to me. music that I truly truly enjoy music that I think hasn't gotten the love and popularity it deserves. <p>
+
+<p>Music that I think resonates with a lot of us but we're not aware of it. </p>
+<p>It's music that can unite us </p>
+<p>It's music that can be soulful.</p>
+<p> It can be intense and hectic. </p>
+<p>It can be fit for banging, raging party, but it's also music that can be played when a few friends are hanging out and just having conversations about life against the sunset.</p>
+<p> I think the time for Asian Underground's revival has come and I, in my limited capacity will do whatever I can to make sure that this music is here to stay. I'm very much motivated to revive Indian fusion. In subtle ways people have indicated their love and want for something similar. 
+
+<p>I hope to be able to carry the mantle forward. I hope to be able to do justice to the music, the beauty of it and the enormous meaningfulness that it has in my life. I'm very excited to start playing music that is dear to me. And I would love for all the people I know anybody to come and join me there with universal love, compassion, and a sense of feeling together.</p>
+
+<p>As I always end my talks, I'm going to end this note with the same line - "I only see further because I stand on the shoulders of giants."</p>
+
+<p>Much Love,</p>
+<p>Shiv</p>
+
+
+
+
     </p>
   </div>
     </div>
