--- a/music/shivAsianUndergroundJourney.html
+++ b/music/shivAsianUndergroundJourney.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="lg:pl-32 mt-12">
-    <div class="max-w-md">
+    <div class="max-s-md">
         
   <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6">The journey to Asian Underground</h1>
   <div class="markdown text-grey">
