--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -77,10 +77,17 @@
     <h3 style="color: white;"><i>TL;DR</i></h3>
     <p>Vibes: Intense / Dark / Pain / Spritual Dancey  </p>
     <p>
-        There is darkness in our lives that cannot be avoided or hidden. Every human experiences pain, rejection, fear, and insecurity. Living in denial will only lead to negative consequences. Music can be a way to work through these issues and become a better person. It's important to create a space for introspection and growth, even if it's slightly darker.
+        ⚛ Every human experiences pain, rejection, fear, and insecurity. 
+        ⚛ There is darkness in our lives that cannot be avoided or hidden. 
+        ⚛ Music can be a way to work through these issues and become a better person. 
+        ⚛ It's important to create a space for introspection and growth, even if it's slightly darker.
  </p>
  <p>
-    The set is going to be more about letting the tracks breathe. Let the artists who have made it express themselves. Sometimes less is more and today is one of the days where i do lesser and not more. No fancy mixing. No looping. Just clean and simple stuff so that I can experience and feel and be through my set.
+    ⚛ Let the tracks breathe. </p>
+    <p>⚛ Let the artists express themselves.</p>
+    <p>⚛ Sometimes less is more and today is one of the day</p>
+    <p>⚛ No fancy mixing. No looping. </p>
+    <p>⚛ Clean and simple transitions so that I experience and feel and be through my set.</p>
 </p>
     </p>
   </div>
