--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -84,10 +84,19 @@
  </p>
  <p>
     ⚛ Let the tracks breathe. </p>
-    <p>⚛ Let the artists express themselves.</p>
+    <p>⚛ Let the music makers express themselves.</p>
     <p>⚛ Sometimes less is more and today is one of the day</p>
     <p>⚛ No fancy mixing. No looping. </p>
     <p>⚛ Clean and simple transitions so that I experience and feel and be through my set.</p>
+</p>
+<p>
+    <h3 style="color: white;"><i>Set is dedicated to:</i></h3>
+    <p> Priyansha (It's her birthday today!)</p>
+    <p> ZoHouse Koramangala (Couldnt have done it without them)</p>
+    <p> Kiran (never passed away, only passed on)</p>
+    <p> Nafisa, Vishesh, Aayush, Aparajita, Ira, Triparna, James</p>
+    <p> Rishi, Deb, Digvijay, Abhishek, Tassneem, Chan</p>
+    <p> The O-27 Trifecta (SLiK)</p>
 </p>
     </p>
   </div>
