--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -74,16 +74,19 @@
         
   <h1 class="text-4xl font-extrabold text-white leading-tight mt-1 mb-6">Arcade 140 set</h1>
   <div class="markdown text-grey">
+    <h4 style="color: white;"><i>Basics</i></h4>
+    <p> 10-11-2023 (Friday / Today) ~ 8-9pm ~ Indiranagar social ~ <a href="https://www.skillboxes.com/events/arcade-140-level-22-ft-spryk-dj-dwell-benkii-and-shivhari">RSVP Link</a></p>
     <h3 style="color: white;"><i>TL;DR</i></h3>
     <p>Vibes: Intense / Dark / Pain / Spritual Dancey  </p>
     <p>
-        ⚛ Every human experiences pain, rejection, fear, and insecurity. 
-        ⚛ There is darkness in our lives that cannot be avoided or hidden. 
-        ⚛ Music can be a way to work through these issues and become a better person. 
-        ⚛ It's important to create a space for introspection and growth, even if it's slightly darker.
+        <p>⚛ Every human experiences pain, rejection, fear, and insecurity. </p>
+        <p>⚛ There is darkness in our lives that cannot be avoided or hidden. </p>
+        <p>⚛ Music can be a way to work through these issues and become a better person. </p>
+        <p>⚛ It's important to create a space for introspection and growth, even if it's slightly darker.</p>
  </p>
  <p>
-    ⚛ Let the tracks breathe. </p>
+    <h4 style="color: white;"><i>Set pointers</i></h4>
+    <p>⚛ Let the tracks breathe. </p>
     <p>⚛ Let the music makers express themselves.</p>
     <p>⚛ Sometimes less is more and today is one of the day</p>
     <p>⚛ No fancy mixing. No looping. </p>
