--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -77,6 +77,7 @@
     <h4 style="color: white;"><i>Basics</i></h4>
     <p> 10-11-2023 (Friday / Today) ~ 8-9pm ~ Indiranagar social ~ <a href="https://www.skillboxes.com/events/arcade-140-level-22-ft-spryk-dj-dwell-benkii-and-shivhari">RSVP Link</a></p>
     <h3 style="color: white;"><i>TL;DR</i></h3>
+    <p>Genre: Bass / Dub / Wonky / Indian Fusion  </p>
     <p>Vibes: Intense / Dark / Pain / Spritual Dancey  </p>
     <p>
         <p>⚛ Every human experiences pain, rejection, fear, and insecurity. </p>
