--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -76,9 +76,10 @@
   <div class="markdown text-grey">
     <h4 style="color: white;"><i>Basics</i></h4>
     <p> 10-11-2023 (Friday / Today) ~ 8-9pm ~ Indiranagar social ~ <a href="https://www.skillboxes.com/events/arcade-140-level-22-ft-spryk-dj-dwell-benkii-and-shivhari">RSVP Link</a></p>
+    <p> Guest list / Interaction with the set: <a href=""></a></p>
     <h3 style="color: white;"><i>TL;DR</i></h3>
     <p>Genre: Bass / Dub / Wonky / Indian Fusion  </p>
-    <p>Vibes: Intense / Dark / Pain / Spritual Dancey  </p>
+    <p>Vibes: Intense / Dark / Pain / Spiritual Dancey  </p>
     <p>
         <p>⚛ Every human experiences pain, rejection, fear, and insecurity. </p>
         <p>⚛ There is darkness in our lives that cannot be avoided or hidden. </p>
@@ -98,7 +99,7 @@
     <p> Priyansha (It's her birthday today!)</p>
     <p> ZoHouse Koramangala (Couldnt have done it without them)</p>
     <p> Kiran (never passed away, only passed on)</p>
-    <p> Nafisa, Vishesh, Aayush, Aparajita, Ira, Triparna, James</p>
+    <p> Nafisa, Vishesh, Nitish, Aayush, Aparajita, Ira, Triparna, James</p>
     <p> Rishi, Deb, Digvijay, Abhishek, Tassneem, Chan</p>
     <p> The O-27 Trifecta (SLiK)</p>
 </p>
