--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -108,7 +108,7 @@
   <div class="markdown text-grey">
     <h3 style="color: white;"><i>Detailed</i></h3>
     <p>
-        ⚛ There is darkness in our live. You cannot run away from it. You cannot hide it. You have to deal with it. 
+        ⚛ There is darkness in our lives. You cannot run away from it. You cannot hide it. You have to deal with it. 
     </p>
     <p>⚛ Every human in the world feels pain, rejection, fear, insecurity, and some more. We project ourselves as someone who is not effected by this because we feel that it will make  people will think lesser of us.
     </p>
