--- a/music/future-dance-wave-26-11-2023.html
+++ b/music/future-dance-wave-26-11-2023.html
@@ -18,7 +18,7 @@
     <div class="flex md:block lg:flex items-center max-w-full">
       <div class="mb-0 md:mb-4 lg:mb-0 flex flex-no-shrink pr-4 md:pr-6 lg:pr-12">
         <a href="index.html" class="flex items-center no-underline">
-          <img class="h-10 w-10 md:h-12 md:w-12 lg:h-20 lg:w-20 rounded-full" src="../img/me.jpg" alt="">
+          <!-- <img class="h-10 w-10 md:h-12 md:w-12 lg:h-20 lg:w-20 rounded-full" src="../img/me.jpg" alt=""> -->
         </a>
       </div>
       <div>
@@ -54,7 +54,7 @@
   </div>
   <div class="lg:pl-32 mt-12">
     <div class="max-s-md">
-        
+      <a href="../img/shiv-fdw.jpg" target="_blank"> <img class="h-10 md:h-12 lg:h-20 rounded-full" src="../img/shiv-fdw.jpg" alt=""></a>
   <h1 class="text-4xl font-extrabold text-white leading-tight mt-1 mb-6">Future Dance Wave - 26-11-2023</h1>
   <div class="markdown text-grey">
     <!-- <h4><div class="text-white"><i>Basics</i></div></h4> -->
