--- a/music/future-dance-wave-26-11-2023.html
+++ b/music/future-dance-wave-26-11-2023.html
@@ -83,6 +83,7 @@
       <p>⚛ "Most relationships are about showing up"</p>
         <p>⚛ "You surf with some people, but you don't dive with them"</p>
           <p>⚛ "Conserve energy to find your momentum"</p>
+          <p>⚛ "I am clear on who I am not. Who I am is still a work in progress."</p>
     <p><b><i class="text-white">Thoughts / State of Mind</i></b></p> 
     <p>
         <p>⚛ Intuition is defined by the ability to know something to be true without know why it is so. </p>
@@ -103,7 +104,8 @@
 <p>I wish you a better understanding of yourself,</p>
 <p class="text-white"><b>- Shiv</b></p>
 <p><i>"I only see further because I stand on the shoulders of giants."</i></p>
-<p><i>"I am clear on who I am not. Who I am is still a work in progress."</i></p>
+<p><i></i></p>
+<p><i>I have been floating about on the an ocean of love .. carried by the winds of desire of the beings that I devote to.</i></p>
     </p>
   </div>
     </div>
