--- a/music/future-dance-wave-26-11-2023.html
+++ b/music/future-dance-wave-26-11-2023.html
@@ -105,7 +105,7 @@
 <p class="text-white"><b>- Shiv</b></p>
 <p><i>"I only see further because I stand on the shoulders of giants."</i></p>
 <p><i></i></p>
-<p><i>I have been floating about on the an ocean of love .. carried by the winds of desire of the beings that I devote to.</i></p>
+<p><i>I have been floating about on the an ocean of love .. carried by the winds of desire of the beings that I devote myself to.</i></p>
     </p>
   </div>
     </div>
