--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         <h1 class="text-2xl font-extrabold text-white mb-4">Me?</h1>
   <div class="text-lg text-grey leading-normal spaced-y-6">
     <p>
-      I currently do Product @ slice
+      Currently: Product @ slice & Music
     </p>
     <p>
-      I love to absorb information and to exercise my intellect. 
+      I engage in product consulting, play indian classical fusion music and a bunch of other things.
     </p>
     <p>
-      I give talks on blockchain, play the mridangam, and beatbox (kind of).
+      I am passionately curious - I love to learn and to exercise my emotional and thinking self. 
     </p>
     <br>
   </div>
