Updated working with me

--- a/aracde-140-gig-state-of-mind.html
+++ b/aracde-140-gig-state-of-mind.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="lg:pl-32 mt-12">
-    <div class="max-s-md">
+    <div class="max-w-md">
         
   <h1 class="text-4xl font-extrabold text-white leading-tight mt-1 mb-6">Arcade 140 set</h1>
   <div class="markdown text-grey">
