--- a/music/future-dance-wave-26-11-2023.html
+++ b/music/future-dance-wave-26-11-2023.html
@@ -53,7 +53,7 @@
     </div>
   </div>
   <div class="lg:pl-32 mt-12">
-    <div class="max-s-md">
+    <div class="max-w-md">
       <a href="../img/shiv-fdw.jpg" target="_blank"> <img class="h-10 md:h-12 lg:h-20 rounded-full" src="../img/shiv-fdw.jpg" alt=""></a>
   <h1 class="text-4xl font-extrabold text-white leading-tight mt-1 mb-6">Future Dance Wave - 26-11-2023</h1>
   <div class="markdown text-grey">
