--- a/music/index.html
+++ b/music/index.html
@@ -78,7 +78,13 @@
     <p class="text-grey">Live electronica (Synthsback) + Guitars (Prince Charazard) + Mridangam + Vocals</p>
     <p class="text-xl text-white leading-tight mt-8 mb-6">With Vyomanaut</p>
     <p class="text-grey">Live Psybient (Vyomanaut) + Mridangam + Sampling + Vocals</p>
-    
+    <h1 class="text-2xl font-extrabold text-white leading-tight mt-16 mb-6 underline">Writings</h1>
+    <p class="text-xl text-white leading-tight mt-8 mb-2">My Journey into Asian Underground</p>
+    <a href="shivAsianUndergroundJourney.html" class="text-grey">Read here..</a>
+    <p class="text-xl text-white leading-tight mt-8 mb-2">Notes for Arcade 140 gig</p>
+    <a href="aracde-140-gig-state-of-mind.html" class="text-grey">Read here..</a>
+    <p class="text-xl text-white leading-tight mt-8 mb-2">Notes for Future Dance Wave gig</p>
+    <a href="future-dance-wave-26-11-2023.html" class="text-grey">Read here..</a>
   </div>
     </div>
   </div>
