--- a/index.html
+++ b/index.html
@@ -1,135 +1,139 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-170777757-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170777757-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-170777757-1');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+        gtag('config', 'UA-170777757-1');
+    </script>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-<meta property="og:url"                content="https://shivhari.me" />
-<meta property="og:type"               content="website" />
-<meta property="og:title"              content="Shivhari Shankar's personal website" />
-<meta property="og:description"        content="My digital representation - contains links and information that I find interesting." />
-<meta property="og:image"              content="./img/me.jpg" />
+    <meta property="og:url" content="https://shivhari.me" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Shivhari Shankar's personal website" />
+    <meta property="og:description" content="My digital representation - contains links and information that I find interesting." />
+    <meta property="og:image" content="./img/me.jpg" />
 
-  <link rel="alternate" type="application/rss+xml" title="adamwathan.me RSS Feed" href="rss/index.xml">
-  <link rel="stylesheet" href="assets/build/css/site.css@id=1f4e7e5e04f37862f26c.css">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/atom-one-dark.min.css"> -->
-  <title>Shivhari Shankar</title>
+    <link rel="alternate" type="application/rss+xml" title="adamwathan.me RSS Feed" href="rss/index.xml">
+    <link rel="stylesheet" href="assets/build/css/site.css@id=1f4e7e5e04f37862f26c.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/atom-one-dark.min.css"> -->
+    <title>Shivhari Shankar</title>
 </head>
+
 <body class="font-sans text-black leading-tight antialiased">
 
-  <div id="app" class="py-8 lg:py-16 px-6 md:px-16 lg:px-24">
-  <div class="relative z-20 flex justify-between items-center">
-    <div class="flex md:block lg:flex items-center max-w-full">
-      <div class="mb-0 md:mb-4 lg:mb-0 flex flex-no-shrink pr-4 md:pr-6 lg:pr-12">
-        <a href="index.html" class="flex items-center no-underline">
-          <img class="h-10 w-10 md:h-12 md:w-12 lg:h-20 lg:w-20 rounded-full" src="./img/me.jpg" alt="">
-        </a>
-      </div>
-      <div>
-        <a href="index.html" class="block text-white no-underline font-bold text-xl lg:text-3xl font-extrabold leading-none lg:leading-tight">Shivhari Shankar</a>
-        <div class="hidden md:flex mt-3 lg:mt-4 uppercase tracking-wide text-xs spaced-x-6">
-          <a href="product-management.html" class="text-grey  font-semibold no-underline hover:underline">Product Management</a>
-          <a href="talks.html" class="text-grey  font-semibold no-underline hover:underline">Talks</a>
-          <a href="collections.html" class="text-grey  font-semibold no-underline hover:underline">Collections</a>
-          <a href="meditation.html" class="text-grey  font-semibold no-underline hover:underline">Meditation</a>
-          <a href="music.html" class="text-grey  font-semibold no-underline hover:underline">Music</a>
-          <a href="procrastination.html" class="text-grey  font-semibold no-underline hover:underline">Procrastination</a>
-          <a href="system-of-recording.html" class="text-grey  font-semibold no-underline hover:underline">My System of recording</a>
-        </div>
-      </div>
-    </div>
-    <div class="block md:hidden">
-      <button class="block" @click="toggleMenu">
+    <div id="app" class="py-8 lg:py-16 px-6 md:px-16 lg:px-24">
+        <div class="relative z-20 flex justify-between items-center">
+            <div class="flex md:block lg:flex items-center max-w-full">
+                <div class="mb-0 md:mb-4 lg:mb-0 flex flex-no-shrink pr-4 md:pr-6 lg:pr-12">
+                    <a href="index.html" class="flex items-center no-underline">
+                        <img class="h-10 w-10 md:h-12 md:w-12 lg:h-20 lg:w-20 rounded-full" src="./img/me.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="index.html" class="block text-white no-underline font-bold text-xl lg:text-3xl font-extrabold leading-none lg:leading-tight">Shivhari Shankar</a>
+                    <div class="hidden md:flex mt-3 lg:mt-4 uppercase tracking-wide text-xs spaced-x-6">
+                        <a href="product-management.html" class="text-grey  font-semibold no-underline hover:underline">Product Management</a>
+                        <a href="talks.html" class="text-grey  font-semibold no-underline hover:underline">Talks</a>
+                        <a href="collections.html" class="text-grey  font-semibold no-underline hover:underline">Collections</a>
+                        <a href="meditation.html" class="text-grey  font-semibold no-underline hover:underline">Meditation</a>
+                        <a href="/music/index.html" class="text-grey  font-semibold no-underline hover:underline">Music</a>
+                        <a href="procrastination.html" class="text-grey  font-semibold no-underline hover:underline">Procrastination</a>
+                        <a href="system-of-recording.html" class="text-grey  font-semibold no-underline hover:underline">My System of recording</a>
+                    </div>
+                </div>
+            </div>
+            <div class="block md:hidden">
+                <button class="block" @click="toggleMenu">
         <span class="text-white">Menu </span><svg style="display: block;" :class="menuOpen ? 'hidden' : 'block'" class="block text-black h-6 w-6" fill="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
         <svg style="display: none;" :class="menuOpen ? 'block' : 'hidden'" class="text-black h-6 w-6" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"/></svg>
       </button>
-    </div>
-  </div>
-  <div style="display: none;" :class="menuOpen ? 'block' : 'hidden'" class="md:hidden z-10 bg-white fixed pin pt-24">
-    <div class="spaced-y-8 overflow-y-auto pt-6 pb-8 px-12 max-h-full overflow-y-auto">
-      <a href="product-management.html" class="block text-black font-bold no-underline">Product Management</a>
-      <a href="talks.html" class="block text-black font-bold no-underline">Talks</a>
-      <a href="collections.html" class="block text-black font-bold no-underline">Collections</a>
-      <a href="meditation.html" class="block text-black font-bold no-underline">Meditation</a>
-      <a href="music.html" class="block text-black font-bold no-underline">Music</a>
-      <a href="procrastination.html" class="block text-black font-bold no-underline">Procrastination</a>
-      <a href="system-of-recording.html" class="block text-black font-bold no-underline">My System of recording</a>
-    </div>
-  </div>
-  <div class="lg:pl-32 mt-12">
-    <div class="max-w-md">
-        <h1 class="text-2xl font-extrabold text-white mb-4">Me?</h1>
-  <div class="text-lg text-grey leading-normal spaced-y-6">
-    <p>
-      Currently: Product @ slice & Music
-    </p>
-    <p>
-      I engage in product consulting, play indian classical fusion music and a bunch of other things.
-    </p>
-    <p>
-      I am passionately curious - I love to learn and to exercise my emotional and thinking self. 
-    </p>
-    <br>
-  </div>
-    </div>
-    <div class="max-w-md">
-        <h1 class="text-2xl font-extrabold text-white mb-4">About this site</h1>
-  </div>
-  <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
-    <p>
-      This site is a digital representation of me. 
-      <br>It has various facets of my life and things that have influenced me. <br>
-      <br>Do click on the tabs and browse around.<br><br>
-      Also check out <a href="collections.html">the collections page.</a> (has an interesting set of collections).<br> The bulk of the information branches off from that page.
-    </p>
-    <br>
-  </div>
-  <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
-    <a id="contact">
-    <p>
-      Contact me:<br>
-      Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br>
-      Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com
-      LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
-    </p>
-    </a>
-    <br>
-  </div>
-</div>
+            </div>
+        </div>
+        <div style="display: none;" :class="menuOpen ? 'block' : 'hidden'" class="md:hidden z-10 bg-white fixed pin pt-24">
+            <div class="spaced-y-8 overflow-y-auto pt-6 pb-8 px-12 max-h-full overflow-y-auto">
+                <a href="product-management.html" class="block text-black font-bold no-underline">Product Management</a>
+                <a href="talks.html" class="block text-black font-bold no-underline">Talks</a>
+                <a href="collections.html" class="block text-black font-bold no-underline">Collections</a>
+                <a href="meditation.html" class="block text-black font-bold no-underline">Meditation</a>
+                <a href="music.html" class="block text-black font-bold no-underline">Music</a>
+                <a href="procrastination.html" class="block text-black font-bold no-underline">Procrastination</a>
+                <a href="system-of-recording.html" class="block text-black font-bold no-underline">My System of recording</a>
+            </div>
+        </div>
+        <div class="lg:pl-32 mt-12">
+            <div class="max-w-md">
+                <h1 class="text-2xl font-extrabold text-white mb-4">Me?</h1>
+                <div class="text-lg text-grey leading-normal spaced-y-6">
+                    <p>
+                        Currently: Product Freelance & Music
+                    </p>
+                    <p>
+                        I do product consulting, play indian classical fusion music and a bunch of other things.
+                    </p>
+                    <p>
+                        I am passionately curious - I love to learn and to exercise my emotional and thinking self.
+                    </p>
+                    <br>
+                </div>
+            </div>
+            <div class="max-w-md">
+                <h1 class="text-2xl font-extrabold text-white mb-4">About this site</h1>
+            </div>
+            <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
+                <p>
+                    This site is a digital representation of me.
+                    <br>It has various facets of my life and things that have influenced me. <br>
+                    <br>Do click on the tabs and browse around.<br><br> Also check out <a href="collections.html">the collections page.</a> (has an interesting set of collections).<br> The bulk of the information branches off from that page.
+                </p>
+                <br>
+            </div>
+            <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
+                <a id="contact">
+                    <p>
+                        Contact me:<br> Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br> Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
+                    </p>
+                </a>
+                <br>
+            </div>
+        </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.min.js"></script>
-<script>
-  new Vue({
-    el: '#app',
-    data: {
-      menuOpen: false
-    },
-    methods: {
-      toggleMenu: function () {
-        if (this.menuOpen) {
-          this.menuOpen = false
-          document.body.classList.remove('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
-        } else {
-          this.menuOpen = true
-          document.body.classList.add('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
-        }
-      }
-    }
-  })
-</script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
-  <script>hljs.initHighlightingOnLoad();</script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.min.js"></script>
+        <script>
+            new Vue({
+                el: '#app',
+                data: {
+                    menuOpen: false
+                },
+                methods: {
+                    toggleMenu: function() {
+                        if (this.menuOpen) {
+                            this.menuOpen = false
+                            document.body.classList.remove('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
+                        } else {
+                            this.menuOpen = true
+                            document.body.classList.add('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
+                        }
+                    }
+                }
+            })
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
+        <script>
+            hljs.initHighlightingOnLoad();
+        </script>
 </body>
+
 </html>
