--- a/music/index.html
+++ b/music/index.html
@@ -1,112 +1,142 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
-  <link rel="alternate" type="application/rss+xml" title="adamwathan.me RSS Feed" href="rss/index.xml">
-  <link rel="stylesheet" href="../assets/build/css/site.css@id=1f4e7e5e04f37862f26c.css">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/atom-one-dark.min.css"> -->
-  <title>Shivhari Shankar</title>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../assets/build/css/site.css@id=1f4e7e5e04f37862f26c.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/atom-one-dark.min.css"> -->
+    <title>Shivhari Shankar</title>
 </head>
+
 <body class="font-sans text-black leading-tight antialiased">
 
-  <div id="app" class="py-8 lg:py-16 px-6 md:px-16 lg:px-24">
-  <div class="relative z-20 flex justify-between items-center">
-    <div class="flex md:block lg:flex items-center max-w-full">
-      <div class="mb-0 md:mb-4 lg:mb-0 flex flex-no-shrink pr-4 md:pr-6 lg:pr-12">
-        <a href="index.html" class="flex items-center no-underline">
-          <img class="h-10 w-10 md:h-12 md:w-12 lg:h-20 lg:w-20 rounded-full" src="../img/me.jpg" alt="">
-        </a>
-      </div>
-      <div>
-        <a href="../index.html" class="block text-white no-underline font-bold text-xl lg:text-3xl font-extrabold leading-none lg:leading-tight">Shivhari Shankar</a>
-        <div class="hidden md:flex mt-3 lg:mt-4 uppercase tracking-wide text-xs spaced-x-6">
-          <a href="../product-management.html" class="text-grey  font-semibold no-underline hover:underline">Product Management</a>
-          <a href="../talks.html" class="text-grey  font-semibold no-underline hover:underline">Talks</a>
-          <a href="../collections.html" class="text-grey  font-semibold no-underline hover:underline">Collections</a>
-          <a href="../meditation.html" class="text-grey  font-semibold no-underline hover:underline">Meditation</a>
-          <a href="../music.html" class="text-grey  font-semibold no-underline hover:underline">Music</a>
-          <a href="../procrastination.html" class="text-grey  font-semibold no-underline hover:underline">Procrastination</a>
-          <a href="../system-of-recording.html" class="text-grey  font-semibold no-underline hover:underline">My System of recording</a>
-        </div>
-      </div>
-    </div>
-    <div class="block md:hidden">
-      <button class="block" @click="toggleMenu">
-        <svg style="display: block;" :class="menuOpen ? 'hidden' : 'block'" class="block text-black h-6 w-6" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-        <svg style="display: none;" :class="menuOpen ? 'block' : 'hidden'" class="text-black h-6 w-6" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"/></svg>
+    <div id="app" class="py-8 lg:py-16 px-6 md:px-16 lg:px-24">
+        <div class="relative z-20 flex justify-between items-center">
+            <div class="flex md:block lg:flex items-center max-w-full">
+                <div class="mb-0 md:mb-4 lg:mb-0 flex flex-no-shrink pr-4 md:pr-6 lg:pr-12">
+                    <a href="index.html" class="flex items-center no-underline">
+                        <img class="h-10 w-10 md:h-12 md:w-12 lg:h-20 lg:w-20 rounded-full" src="../img/me.jpg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="../index.html" class="block text-white no-underline font-bold text-xl lg:text-3xl font-extrabold leading-none lg:leading-tight">Shivhari Shankar</a>
+                    <div class="hidden md:flex mt-3 lg:mt-4 uppercase tracking-wide text-xs spaced-x-6">
+                        <a href="../product-management.html" class="text-grey  font-semibold no-underline hover:underline">Product Management</a>
+                        <a href="../talks.html" class="text-grey  font-semibold no-underline hover:underline">Talks</a>
+                        <a href="../collections.html" class="text-grey  font-semibold no-underline hover:underline">Collections</a>
+                        <a href="../meditation.html" class="text-grey  font-semibold no-underline hover:underline">Meditation</a>
+                        <a href="../music.html" class="text-grey  font-semibold no-underline hover:underline">Music</a>
+                        <a href="../procrastination.html" class="text-grey  font-semibold no-underline hover:underline">Procrastination</a>
+                        <a href="../system-of-recording.html" class="text-grey  font-semibold no-underline hover:underline">My System of recording</a>
+                    </div>
+                </div>
+            </div>
+            <div class="block md:hidden">
+                <button class="block" @click="toggleMenu" id="toggleMenuButton">
+        <svg style="display: block;" class="block text-black h-6 w-6" fill="#aaa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+        <svg class="hidden text-black h-6 w-6" fill="#aaa" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"/></svg>
       </button>
+            </div>
+        </div>
+        <div class="hidden z-10 bg-grey-darker fixed pin pt-24">
+            <div class="spaced-y-8 overflow-y-auto pt-6 pb-8 px-12 max-h-full overflow-y-auto">
+                <a href="../product-management.html" class="block text-black font-bold no-underline">Product Management</a>
+                <a href="../talks.html" class="block text-black font-bold no-underline">Talks</a>
+                <a href="../collections.html" class="block text-black font-bold no-underline">Collections</a>
+                <a href="../meditation.html" class="block text-black font-bold no-underline">Meditation</a>
+                <a href="../music.html" class="block text-black font-bold no-underline">Music</a>
+                <a href="../procrastination.html" class="block text-black font-bold no-underline">Procrastination</a>
+                <a href="../system-of-recording.html" class="block text-black font-bold no-underline">My System of recording</a>
+            </div>
+        </div>
+        <div class="lg:pl-32 mt-12">
+            <div class="max-w-md">
+                <h1 class="text-xl font-extrabold text-white leading-tight mt-1 mb-6 underline">10 Ragas Warped</h1>
+                <div class="markdown text-grey mb-4">
+                    <a href="https://altspaces.live/Raag_Bhairav_warped_12092024.wav">Raag Bhairav</a>
+                </div>
+                <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6 underline">Sets</h1>
+                <div class="markdown text-grey">
+                    <div class="flex flex-col items-stretch">
+                        <p class="text-md">
+                            <div style="font-size: 14px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/shivhari/asian-underground-breakbeat-for-obscura-indiranagar-social-06072024" title="Asian Underground Breakbeat - For Obscura @ Indiranagar Social - 06072024" target="_blank" style="color: #cccccc; text-decoration: none;">Asian Underground Breakbeat - For Obscura @ Indiranagar Social - 06072024</a></div>
+                            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1900859334&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                        </p>
+                        <p class="pt-4">
+                            <div style="font-size: 14px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/shivhari/inditronica-hybrid-set-alliance-francaise-01-09-2024" title="Inditronica Hybrid Set @ Alliance Française - 01-09-2024" target="_blank" style="color: #cccccc; text-decoration: none;">Inditronica Hybrid Set @ Alliance Française - 01-09-2024</a></div>
+                            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1914647633&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                        </p>
+                        <button id="showMoreBtn" class="mt-4 bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded">
+                          Show More
+                      </button>
+                        <div id="hiddenContent" style="display: none;">
+                            <p class="pt-8" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1754201373&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></p>
+                            <p class="pt-8" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1743709944&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></p>
+                            <p class="pt-8" data-src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1661335461&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></p>
+                        </div>
+                    </div>
+
+                    <h1 class="text-2xl font-extrabold text-white leading-tight mt-16 mb-6 underline">Projects</h1>
+                    <p class="text-xl text-white leading-tight mt-8 mb-6">With Goatichathan</p>
+                    <p class="text-grey">Indian ragas on Guitar + Indian Vocals + DJ Set</p>
+                    <p class="text-xl text-white leading-tight mt-8 mb-6">With Arundhati</p>
+                    <p class="text-grey">Drum and Bass DJ Set + Liquid DnB Vocals + Mridangam + Indian Vocals</p>
+                    <p class="text-xl text-white leading-tight mt-8 mb-6">Going Beyond</p>
+                    <p class="text-grey">Live electronica (Synthsback) + Guitars (Prince Charazard) + Mridangam + Vocals</p>
+                    <p class="text-xl text-white leading-tight mt-8 mb-6">With Vyomanaut</p>
+                    <p class="text-grey">Live Psybient (Vyomanaut) + Mridangam + Sampling + Vocals</p>
+                    <h1 class="text-2xl font-extrabold text-white leading-tight mt-16 mb-6 underline">Writings</h1>
+                    <p class="text-xl text-white leading-tight mt-8 mb-2">My Journey into Asian Underground</p>
+                    <a href="shivAsianUndergroundJourney.html" class="text-grey">Read here..</a>
+                    <p class="text-xl text-white leading-tight mt-8 mb-2">Notes for Arcade 140 gig</p>
+                    <a href="aracde-140-gig-state-of-mind.html" class="text-grey">Read here..</a>
+                    <p class="text-xl text-white leading-tight mt-8 mb-2">Notes for Future Dance Wave gig</p>
+                    <a href="future-dance-wave-26-11-2023.html" class="text-grey">Read here..</a>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <div style="display: none;" :class="menuOpen ? 'block' : 'hidden'" class="md:hidden z-10 bg-white fixed pin pt-24">
-    <div class="spaced-y-8 overflow-y-auto pt-6 pb-8 px-12 max-h-full overflow-y-auto">
-      <a href="../product-management.html" class="block text-black font-bold no-underline">Product Management</a>
-      <a href="../talks.html" class="block text-black font-bold no-underline">Talks</a>
-      <a href="../collections.html" class="block text-black font-bold no-underline">Collections</a>
-      <a href="../meditation.html" class="block text-black font-bold no-underline">Meditation</a>
-      <a href="../music.html" class="block text-black font-bold no-underline">Music</a>
-      <a href="../procrastination.html" class="block text-black font-bold no-underline">Procrastination</a>
-      <a href="../system-of-recording.html" class="block text-black font-bold no-underline">My System of recording</a>
-    </div>
-  </div>
-  <div class="lg:pl-32 mt-12">
-    <div class="max-w-md">
-        
-  <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6 underline">Sets</h1>
-  <div class="markdown text-grey">
-    <div class="flex flex-col items-stretch">
-      <p class="text-md">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1754201373&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe></div>
-      </p>
-      <p class="pt-8">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1743709944&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-      </p>
-      <p class="pt-8">
-        <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1661335461&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-      </p>
-    </div>
-    
-    <h1 class="text-2xl font-extrabold text-white leading-tight mt-16 mb-6 underline">Projects</h1>
-    <p class="text-xl text-white leading-tight mt-8 mb-6">With Goatichathan</p>
-    <p class="text-grey">Indian ragas on Guitar + Indian Vocals + DJ Set</p>
-    <p class="text-xl text-white leading-tight mt-8 mb-6">With Arundhati</p>
-    <p class="text-grey">Drum and Bass DJ Set + Liquid DnB Vocals + Mridangam + Indian Vocals</p>
-    <p class="text-xl text-white leading-tight mt-8 mb-6">Going Beyond</p>
-    <p class="text-grey">Live electronica (Synthsback) + Guitars (Prince Charazard) + Mridangam + Vocals</p>
-    <p class="text-xl text-white leading-tight mt-8 mb-6">With Vyomanaut</p>
-    <p class="text-grey">Live Psybient (Vyomanaut) + Mridangam + Sampling + Vocals</p>
-    <h1 class="text-2xl font-extrabold text-white leading-tight mt-16 mb-6 underline">Writings</h1>
-    <p class="text-xl text-white leading-tight mt-8 mb-2">My Journey into Asian Underground</p>
-    <a href="shivAsianUndergroundJourney.html" class="text-grey">Read here..</a>
-    <p class="text-xl text-white leading-tight mt-8 mb-2">Notes for Arcade 140 gig</p>
-    <a href="aracde-140-gig-state-of-mind.html" class="text-grey">Read here..</a>
-    <p class="text-xl text-white leading-tight mt-8 mb-2">Notes for Future Dance Wave gig</p>
-    <a href="future-dance-wave-26-11-2023.html" class="text-grey">Read here..</a>
-  </div>
-    </div>
-  </div>
-</div>
-<script>
-  new Vue({
-    el: '#app',
-    data: {
-      menuOpen: false
-    },
-    methods: {
-      toggleMenu: function () {
-        if (this.menuOpen) {
-          this.menuOpen = false
-          document.body.classList.remove('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
-        } else {
-          this.menuOpen = true
-          document.body.classList.add('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
-        }
-      }
-    }
-  })
-</script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const showMoreBtn = document.getElementById('showMoreBtn');
+            const hiddenContent = document.getElementById('hiddenContent');
+            const toggleMenuButton = document.getElementById('toggleMenuButton');
+
+            function loadIframes() {
+                document.querySelectorAll('#hiddenContent p').forEach(p => {
+                    if (!p.querySelector('iframe')) {
+                        const iframe = document.createElement('iframe');
+                        iframe.src = p.dataset.src;
+                        iframe.width = '100%';
+                        iframe.height = '166';
+                        iframe.scrolling = 'no';
+                        iframe.frameBorder = 'no';
+                        iframe.allow = 'autoplay';
+                        p.appendChild(iframe);
+                    }
+                });
+            }
+
+            showMoreBtn.addEventListener('click', function() {
+                if (hiddenContent.style.display === 'none') {
+                    hiddenContent.style.display = 'block';
+                    showMoreBtn.textContent = 'Show Less';
+                    loadIframes();
+                } else {
+                    hiddenContent.style.display = 'none';
+                    showMoreBtn.textContent = 'Show More';
+                }
+            });
+
+            toggleMenuButton.addEventListener('click', function() {
+                console.log('clicked');
+                const menu = document.querySelector('.fixed.pin');
+                menu.classList.toggle('hidden');
+            });
+        });
+    </script>
 </body>
+
 </html>
