Updated the og:image in music page.

--- a/music/index.html
+++ b/music/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:url" content="https://shivhari.me" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Shivhari Shankar - Music" />
+    <meta property="og:description" content="My digital representation - contains information and things that I find interesting." />
+    <meta property="og:image" content="../img/me2.png" />
     <link rel="stylesheet" href="../assets/build/css/site.css@id=1f4e7e5e04f37862f26c.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/atom-one-dark.min.css"> -->
     <title>Shivhari Shankar - Music</title>
