line break for linkedin in home page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
                 <a id="contact">
                     <p>
-                        Contact me:<br> Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br> Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
+                        Contact me:<br> Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br> Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com <br>LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
                     </p>
                 </a>
                 <br>
